--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 .DS_Store
 src/.DS_Store
+ml_intern/data/row/mainbranch_work.csv
+ml_intern/data/row/syukujitsu.csv
+ml_intern/usr/tamakawa/src/notebook/tutorial.ipynb
+ml_intern/usr/tamakawa/src/.ipynb_checkpoints/test-checkpoint.ipynb
+ml_intern/usr/tamakawa/src/.ipynb_checkpoints/Untitled-checkpoint.ipynb
